--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "data.management-csharp-bim360.issues",
     "description": "BIM 360 Issues & Markups",
-    "repository": "https://github.com/autodesk-forge/data.management-csharp-bim360.issues",
+    "repository": "https://github.com/Autodesk-Forge/bim360-csharp-issues",
     "logo": "https://avatars0.githubusercontent.com/u/8017462?v=3&s=200",
     "keywords": [
         "autodesk",
